k8s/full-minimal-example.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rpc-forwarder
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rpc-forwarder
  template:
    metadata:
      labels:
        app: rpc-forwarder
    spec:
      containers:
        - name: rpc-forwarder
          image: shuliakovsky/rpc-forwarder:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: rpc-forwarder
spec:
  selector:
    app: rpc-forwarder
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rpc-forwarder
spec:
  rules:
    - host: rpc-forwarder.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rpc-forwarder
                port:
                  number: 80
